<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="12dp">

        <RadioGroup
            android:id="@+id/rg_ocr_modes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbtn_mode_original"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ocr_mode_original" />

            <RadioButton
                android:id="@+id/rbtn_mode_quick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ocr_mode_quick" />

            <RadioButton
                android:id="@+id/rbtn_mode_robust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ocr_mode_robust" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkbox_ocr_auto_rotate_apply_export_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/opt_ocr_auto_rotate_apply_export" />

        <CheckBox
            android:id="@+id/checkbox_ocr_post_processing_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/opt_ocr_post_processing" />

        <CheckBox
            android:id="@+id/checkbox_layout_analysis_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/opt_layout_analysis" />

    </LinearLayout>
</ScrollView>
