<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words_count_initial"
        app:chipIconVisible="false"
        app:closeIconVisible="false"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_placeholder"
        app:chipIconVisible="false"
        app:closeIconVisible="false"
        android:layout_marginStart="4dp"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_placeholder"
        app:chipIconVisible="false"
        app:closeIconVisible="false"
        android:layout_marginStart="4dp"/>

</LinearLayout>
